backend/test/refactor: Add red text for filtering, pagination and refactor code to green test